[gd_scene load_steps=4 format=3 uid="uid://c3iibuhp878v1"]

[ext_resource type="Script" uid="uid://ccrvqauxhg4g7" path="res://states/connected/connected.gd" id="1_idi6s"]
[ext_resource type="Script" uid="uid://dbn0s7ihootr3" path="res://classes/log/log.gd" id="1_jx7w3"]
[ext_resource type="Texture2D" uid="uid://n5bq35k41cqm" path="res://sprites/floor.svg" id="4_x7iwh"]

[node name="Connected" type="Node"]
script = ExtResource("1_idi6s")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 851.0
grow_horizontal = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[shake][b]Grow some balls[/b][/shake]"

[node name="Username" type="LineEdit" parent="UI/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="UI/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
virtual_keyboard_type = 6
secret = true

[node name="ColorPicker" type="ColorPicker" parent="UI/VBoxContainer"]
layout_mode = 2
picker_shape = 1
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Register"

[node name="PlayAsGuestButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play as guest"

[node name="Log" type="RichTextLabel" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
script = ExtResource("1_jx7w3")
metadata/_custom_type_script = "uid://dbn0s7ihootr3"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("4_x7iwh")
centered = false
region_enabled = true
region_rect = Rect2(0, 1152, 1152, 648)
